@startuml

hide circle
skinparam classAttributeIconSize 0

abstract "{abstract}\nCommand" {

    {abstract} +execute(...)
    +isExit()
    }

    class ExitCommand {
        +execute(...)
        +isExit()
    }
    class HighscoreCommand {
        +execute(...)
    }
    class HighscoreListCommand {
        +execute(...)
    }
    class MilestoneCommand {
        +execute(...)
    }
    class ProgressReportCommand {
        +execute(...)
    }
    class StartCommand {
        +execute(...)
    }
    class TargetAddScoreCommand {
        +execute(...)
    }
    class TargetAddSpeedCommand {
        +execute(...)
    }
    class TargetListCommand {
        +execute(...)
    }
    class TargetRemoveCommand {
        +execute(...)
    }

    "{abstract}\nCommand" <|-- ExitCommand
    "{abstract}\nCommand" <|-- HighscoreCommand
    "{abstract}\nCommand" <|--- HighscoreListCommand
    "{abstract}\nCommand" <|--- MilestoneCommand
    "{abstract}\nCommand" <|---- ProgressReportCommand
    "{abstract}\nCommand" <|---- StartCommand
    "{abstract}\nCommand" <|--- TargetAddScoreCommand
    "{abstract}\nCommand" <|--- TargetAddSpeedCommand
    "{abstract}\nCommand" <|-- TargetListCommand
    "{abstract}\nCommand" <|-- TargetRemoveCommand
@enduml
